IJPL-225522 cleanup JavaAutoPopupTest
GitOrigin-RevId: 101b8b68e181e54f6cdc968a61de4c119aace14a