@@ -152,7 +152,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     assertEquals("iterable2", getLookup().getCurrentItem().getLookupString());
 
     type("r");
-    assertEquals("iter", getLookup().getItems().get(0).getLookupString());
+    assertEquals("iter", getLookup().getItems().getFirst().getLookupString());
     assertEquals("iterable2", getLookup().getCurrentItem().getLookupString());
   }
 
@@ -258,7 +258,6 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void test_autopopup_in_javadoc_tag_name() {
-    //noinspection JavadocDeclaration
     myFixture.configureByText("a.java", """
       /**
        * @a<caret>
@@ -286,7 +285,6 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void test_autopopup_in_javadoc_parameter_name() {
-    //noinspection JavadocDeclaration
     myFixture.configureByText("a.java", """
       class Foo {
         /**
@@ -329,7 +327,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     edt(() -> {
       myFixture.type("r");
       getLookup().markReused();
-      getLookup().setCurrentItem(getLookup().getItems().get(0));
+      getLookup().setCurrentItem(getLookup().getItems().getFirst());
       CommandProcessor.getInstance().executeCommand(getProject(), () -> getLookup().finishLookup(Lookup.NORMAL_SELECT_CHAR), null, null);
     });
     myFixture.checkResult("""
@@ -348,7 +346,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
       myFixture.type("r");
       getLookup().markReused();
       myFixture.type("\b\b");
-      getLookup().setCurrentItem(getLookup().getItems().get(0));
+      getLookup().setCurrentItem(getLookup().getItems().getFirst());
       CommandProcessor.getInstance()
         .executeCommand(getProject(), () -> getLookup().finishLookup(Lookup.NORMAL_SELECT_CHAR), null, null);
     });
@@ -830,7 +828,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void testTemplatesWithNonImportedClasses() {
-    CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.NONE;
+    CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.NONE);
     myFixture.addClass("package foo.bar; public class ToArray {}");
     try {
       myFixture.configureByText("a.java", "class Foo {{ foo(<caret>) }}");
@@ -840,7 +838,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
       assertTrue(myFixture.getLookupElementStrings().contains("ToArray"));
     }
     finally {
-      CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.FIRST_LETTER;
+      CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.FIRST_LETTER);
     }
   }
 
@@ -859,14 +857,14 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void testNewClassParenthesis() {
-    CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.NONE;
+    CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.NONE);
     try{
       myFixture.configureByText("a.java", " class Foo { static { new <caret> } } ");
       type("aioo(");
       assertTrue(myFixture.getEditor().getDocument().getText().contains("new ArrayIndexOutOfBoundsException()"));
     }
     finally {
-      CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.FIRST_LETTER;
+      CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.FIRST_LETTER);
     }
   }
 
@@ -1485,7 +1483,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   protected void tearDown() throws Exception {
     try {
       CodeInsightSettings.getInstance().setSelectAutopopupSuggestionsByChars(false);
-      CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.FIRST_LETTER;
+      CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.FIRST_LETTER);
       UISettings.getInstance().setSortLookupElementsLexicographically(false);
     }
     catch (Throwable e) {
@@ -1497,7 +1495,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void testBackspaceShouldShowPreviousVariants() {
-    CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.NONE;
+    CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.NONE);
     myFixture.configureByText("a.java", "class Foo{ void foo(int itera, int itex) { it<caret> }}");
     type("e");
     myFixture.assertPreferredCompletionItems(0, "itera", "itex");
@@ -1528,7 +1526,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void test_new_primitive_array_in_Object_variable() {
-    CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.NONE;
+    CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.NONE);
     myFixture.configureByText("a.java", "\nclass Foo {\n  void foo() {\n    Object o = new <caret>\n  }\n}\n");
     type("int");
     myFixture.assertPreferredCompletionItems(0, "int", "Integer");
@@ -1813,7 +1811,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     type("s");
     myFixture.assertPreferredCompletionItems(0, ArrayUtil.toStringArray(Collections.nCopies(count, "MyClass")));
     edt(() -> {
-      assertEquals(" p" + toSelect, NormalCompletionTestCase.renderElement(myFixture.getLookup().getItems().get(0)).getTailText());
+      assertEquals(" p" + toSelect, NormalCompletionTestCase.renderElement(myFixture.getLookup().getItems().getFirst()).getTailText());
     });
   }
 
